# osxbom

./: .gitattributes  .gitignore  .travis.yml  .yamllint.yml  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  Makefile.orig.in  Makefile_orig_hardcoded  NEWS  Portfile  README  THANKS  TODO  aclocal.m4  bom.h  config.h.in  configure  configure.ac  configure.scan  expected_results_for_test_bom.txt  lsbom.cpp  lsbom_disasm.s  lsbom_disasm_annot.s  osxbom.1  test.bom
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql.yml  flawfinder.yml  osxbom.yml
English.lproj/: lsbom.strings
build-aux/: .gitattributes
osxbom.xcodeproj/: project.pbxproj
